--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@
         </script>
     </div><br>
     <div>
-        <button onclick="document.getElementById('myImage').src='Idle.png'">แมวยืน</button>
-        <img id="myImage" src="Idle.png" width="200px">
-        <button onclick="document.getElementById('myImage').src='Slide.png'">แมวสไลด์</button>
+        <button onclick="document.getElementById('myImage').src='images/Idle.png'">แมวยืน</button>
+        <img id="myImage" src="images/Idle.png" width="200px">
+        <button onclick="document.getElementById('myImage').src='images/Slide.png'">แมวสไลด์</button>
     </div>
     <br>
     <div>
